# bazel-hello-world-examples

./: .bazelrc  LICENSE  MODULE.bazel  README.md  WORKSPACE
examples/hello/c/: BUILD
examples/hello/kotlin/: BUILD  Hello.kt
examples/hello/python/: BUILD  dynamic.bzl  dynamic_friend_provider.tmpl  hello.py  school_friend_provider.py  work_friend_provider.py
examples/hello/swift/: BUILD  hello.swift  names.swift
hello/c/: hello.c
hello/kotlin/: BUILD
hello/python/: BUILD  dynamic_friend_provider.tmpl  executive_friend_provider.py  friend_provider.py  hello.py  test_executive_friends.py
hello/swift/: BUILD  hello.swift  people.swift
