module(name = "bazel-101", version = "0.1")

# BEGIN: Needed for Swift development
bazel_dep(name = "rules_swift", version = "3.6.1", repo_name = "build_bazel_rules_swift")
# <END>: Needed for Swift development

# BEGIN: Needed for kotlin development
bazel_dep(name = "rules_kotlin", version = "2.3.20")
# <END>: Needed for kotlin development

